Jar-some minor changes and added code to create graphs for the linear model

--- a/DataMiningProject.ipynb
+++ b/DataMiningProject.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7068866341f9394e",
    "metadata": {
     "ExecuteTime": {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "df2ce677",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zr/73hg6l9j7p739_l5lp2w946w0000gn/T/ipykernel_1525/3459460400.py:2: DtypeWarning: Columns (3,7,12,16,20,23,25,26,31,32,33,35,39,40,41,47,52,53,61,62,66,68) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/zr/73hg6l9j7p739_l5lp2w946w0000gn/T/ipykernel_42262/3459460400.py:2: DtypeWarning: Columns (3,7,12,16,20,23,25,26,31,32,33,35,39,40,41,47,52,53,61,62,66,68) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  return pd.read_csv(filename)\n"
      ]
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a8c6f695",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f0b6d083",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5f737b25",
    "metadata": {},
    "outputs": [
@@ -288,112 +288,326 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>54311</th>\n",
-       "      <td>[Black, Blue, White]</td>\n",
-       "      <td>B, U, W</td>\n",
-       "      <td>7232.0</td>\n",
-       "      <td>0.25</td>\n",
+       "      <th>779</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.25</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>[Connive]</td>\n",
+       "      <td>[]</td>\n",
        "      <td>normal</td>\n",
-       "      <td>{1}{W}{U}{B}</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Kamiz, Obscura Oculus</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Octopus, Rogue</td>\n",
-       "      <td>Legendary</td>\n",
-       "      <td>Whenever you attack, target attacking creature...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Legendary Creature — Octopus Rogue</td>\n",
-       "      <td>Creature</td>\n",
-       "      <td>True</td>\n",
-       "      <td>mythic</td>\n",
+       "      <td>{1}</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sol Ring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{T}: Add {C}{C}.</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>False</td>\n",
+       "      <td>uncommon</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54412</th>\n",
-       "      <td>[Black, Blue, White]</td>\n",
-       "      <td>B, U, W</td>\n",
-       "      <td>7232.0</td>\n",
-       "      <td>0.25</td>\n",
+       "      <th>1905</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.25</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>[Connive]</td>\n",
+       "      <td>[]</td>\n",
        "      <td>normal</td>\n",
-       "      <td>{1}{W}{U}{B}</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Kamiz, Obscura Oculus</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Octopus, Rogue</td>\n",
-       "      <td>Legendary</td>\n",
-       "      <td>Whenever you attack, target attacking creature...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Legendary Creature — Octopus Rogue</td>\n",
-       "      <td>Creature</td>\n",
-       "      <td>True</td>\n",
-       "      <td>mythic</td>\n",
+       "      <td>{1}</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sol Ring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{T}: Add {C}{C}.</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>False</td>\n",
+       "      <td>common</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54497</th>\n",
-       "      <td>[Black, Blue, White]</td>\n",
-       "      <td>B, U, W</td>\n",
-       "      <td>7232.0</td>\n",
-       "      <td>0.25</td>\n",
+       "      <th>2040</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.25</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>[Connive]</td>\n",
+       "      <td>[]</td>\n",
        "      <td>normal</td>\n",
-       "      <td>{1}{W}{U}{B}</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Kamiz, Obscura Oculus</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Octopus, Rogue</td>\n",
-       "      <td>Legendary</td>\n",
-       "      <td>Whenever you attack, target attacking creature...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Legendary Creature — Octopus Rogue</td>\n",
-       "      <td>Creature</td>\n",
-       "      <td>True</td>\n",
-       "      <td>mythic</td>\n",
+       "      <td>{1}</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sol Ring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{T}: Add {C}{C}.</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>False</td>\n",
+       "      <td>uncommon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2202</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>{1}</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sol Ring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{T}: Add {C}{C}.</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>False</td>\n",
+       "      <td>common</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2337</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>{1}</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sol Ring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{T}: Add {C}{C}.</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>False</td>\n",
+       "      <td>uncommon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92035</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>{1}</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sol Ring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{T}: Add {C}{C}.</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>False</td>\n",
+       "      <td>uncommon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94103</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>{1}</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sol Ring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{T}: Add {C}{C}.</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>False</td>\n",
+       "      <td>uncommon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94711</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>{1}</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sol Ring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{T}: Add {C}{C}.</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>False</td>\n",
+       "      <td>uncommon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95197</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>{1}</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sol Ring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{T}: Add {C}{C}.</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>False</td>\n",
+       "      <td>uncommon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97178</th>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>{1}</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sol Ring</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>{T}: Add {C}{C}.</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>Artifact</td>\n",
+       "      <td>False</td>\n",
+       "      <td>uncommon</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>93 rows × 20 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              colorIdentity   colors  edhrecRank  edhrecSaltiness  \\\n",
-       "54311  [Black, Blue, White]  B, U, W      7232.0             0.25   \n",
-       "54412  [Black, Blue, White]  B, U, W      7232.0             0.25   \n",
-       "54497  [Black, Blue, White]  B, U, W      7232.0             0.25   \n",
+       "      colorIdentity colors  edhrecRank  edhrecSaltiness  \\\n",
+       "779              []     []         1.0             1.25   \n",
+       "1905             []     []         1.0             1.25   \n",
+       "2040             []     []         1.0             1.25   \n",
+       "2202             []     []         1.0             1.25   \n",
+       "2337             []     []         1.0             1.25   \n",
+       "...             ...    ...         ...              ...   \n",
+       "92035            []     []         1.0             1.25   \n",
+       "94103            []     []         1.0             1.25   \n",
+       "94711            []     []         1.0             1.25   \n",
+       "95197            []     []         1.0             1.25   \n",
+       "97178            []     []         1.0             1.25   \n",
        "\n",
-       "      hasAlternativeDeckLimit isReserved   keywords  layout      manaCost  \\\n",
-       "54311                   False      False  [Connive]  normal  {1}{W}{U}{B}   \n",
-       "54412                   False      False  [Connive]  normal  {1}{W}{U}{B}   \n",
-       "54497                   False      False  [Connive]  normal  {1}{W}{U}{B}   \n",
+       "      hasAlternativeDeckLimit isReserved keywords  layout manaCost  manaValue  \\\n",
+       "779                     False      False       []  normal      {1}        1.0   \n",
+       "1905                    False      False       []  normal      {1}        1.0   \n",
+       "2040                    False      False       []  normal      {1}        1.0   \n",
+       "2202                    False      False       []  normal      {1}        1.0   \n",
+       "2337                    False      False       []  normal      {1}        1.0   \n",
+       "...                       ...        ...      ...     ...      ...        ...   \n",
+       "92035                   False      False       []  normal      {1}        1.0   \n",
+       "94103                   False      False       []  normal      {1}        1.0   \n",
+       "94711                   False      False       []  normal      {1}        1.0   \n",
+       "95197                   False      False       []  normal      {1}        1.0   \n",
+       "97178                   False      False       []  normal      {1}        1.0   \n",
        "\n",
-       "       manaValue                   name power        subtypes supertypes  \\\n",
-       "54311        4.0  Kamiz, Obscura Oculus     2  Octopus, Rogue  Legendary   \n",
-       "54412        4.0  Kamiz, Obscura Oculus     2  Octopus, Rogue  Legendary   \n",
-       "54497        4.0  Kamiz, Obscura Oculus     2  Octopus, Rogue  Legendary   \n",
+       "           name power subtypes supertypes              text toughness  \\\n",
+       "779    Sol Ring   NaN       []         []  {T}: Add {C}{C}.        -1   \n",
+       "1905   Sol Ring   NaN       []         []  {T}: Add {C}{C}.        -1   \n",
+       "2040   Sol Ring   NaN       []         []  {T}: Add {C}{C}.        -1   \n",
+       "2202   Sol Ring   NaN       []         []  {T}: Add {C}{C}.        -1   \n",
+       "2337   Sol Ring   NaN       []         []  {T}: Add {C}{C}.        -1   \n",
+       "...         ...   ...      ...        ...               ...       ...   \n",
+       "92035  Sol Ring   NaN       []         []  {T}: Add {C}{C}.        -1   \n",
+       "94103  Sol Ring   NaN       []         []  {T}: Add {C}{C}.        -1   \n",
+       "94711  Sol Ring   NaN       []         []  {T}: Add {C}{C}.        -1   \n",
+       "95197  Sol Ring   NaN       []         []  {T}: Add {C}{C}.        -1   \n",
+       "97178  Sol Ring   NaN       []         []  {T}: Add {C}{C}.        -1   \n",
        "\n",
-       "                                                    text toughness  \\\n",
-       "54311  Whenever you attack, target attacking creature...         4   \n",
-       "54412  Whenever you attack, target attacking creature...         4   \n",
-       "54497  Whenever you attack, target attacking creature...         4   \n",
+       "           type     types  is_legendary    rarity  \n",
+       "779    Artifact  Artifact         False  uncommon  \n",
+       "1905   Artifact  Artifact         False    common  \n",
+       "2040   Artifact  Artifact         False  uncommon  \n",
+       "2202   Artifact  Artifact         False    common  \n",
+       "2337   Artifact  Artifact         False  uncommon  \n",
+       "...         ...       ...           ...       ...  \n",
+       "92035  Artifact  Artifact         False  uncommon  \n",
+       "94103  Artifact  Artifact         False  uncommon  \n",
+       "94711  Artifact  Artifact         False  uncommon  \n",
+       "95197  Artifact  Artifact         False  uncommon  \n",
+       "97178  Artifact  Artifact         False  uncommon  \n",
        "\n",
-       "                                     type     types  is_legendary  rarity  \n",
-       "54311  Legendary Creature — Octopus Rogue  Creature          True  mythic  \n",
-       "54412  Legendary Creature — Octopus Rogue  Creature          True  mythic  \n",
-       "54497  Legendary Creature — Octopus Rogue  Creature          True  mythic  "
+       "[93 rows x 20 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['name'] == 'Kamiz, Obscura Oculus']"
+    "df[df['name'] == \"Yuriko, the Tiger's Shadow\"]"
    ]
   },
   {
